--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -11,10 +11,16 @@ font-family: Arial, Helvetica, sans-serif;
 h1, 
 p {
     text-align: center;
+    margin: 10px;
 }
 
 header {
     background-color: rgb(189, 109, 223);
     color: white;
     padding: 74px;
+}
+
+main{
+    height: 600px;
+    background-color: rgb(222, 222, 223);
 }
