--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -2,25 +2,46 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
 font-family: Arial, Helvetica, sans-serif;
-}
-
-h1, 
-p {
-    text-align: center;
-    margin: 10px;
+display: flex;
+flex-direction: column;
+min-height: 100vh;
+line-height: 1.6;
 }
 
 header {
-    background-color: rgb(189, 109, 223);
-    color: white;
+    background-color: rgb(118, 1, 168);
+    color: rgb(255, 255, 255);
     padding: 74px;
+    text-align: center;
 }
 
-main{
-    height: 600px;
-    background-color: rgb(222, 222, 223);
+main {
+    background-color: rgb(241, 229, 253);
+    flex: 1;
+    padding: 48px 38px;
+}
+
+#sobre-mim {
+    display: block;
+    background-color: rgb(250, 248, 250);
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 20px;
+}
+
+#titulo-sobre-mim {
+    font-size: 25px;
+    margin-bottom: 16px;
+    border-bottom: 2px solid rgb(118, 1, 168);
+    margin-bottom: 25;
+}
+
+.texto-sobre-mim {
+    font-size: 15px;
 }
