Feat: Finish hobbies section

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -33,6 +33,7 @@ main {
     margin: 0 auto;
     padding: 40px;
     border-radius: 20px;
+    margin-bottom: 40px;
 }
 
 #titulo-sobre-mim {
@@ -44,4 +45,41 @@ main {
 
 .texto-sobre-mim {
     font-size: 15px;
+}
+
+#meus-hobbies {
+    background-color: rgb(250, 248, 250);
+    width: 80%;
+    margin-bottom: 16px;
+    border-radius: 12px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+#titulo-meus-hobbies {
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 16px;
+}
+
+li {
+    background-color: rgb(118, 1, 168);
+    color: #ffffff;
+    padding: 8px;
+    border-left: 4px solid rgb(203, 181, 243);
+    border-radius: 12px;
+    font-size: 16px;
+    min-width: 250px;
+}
+
+li:hover {
+    background-color: rgb(199, 161, 243);
+    transform: translateX(5px);
+    transition: all 0.3s ease;
 }
