--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+
 /* RESET DO CSS */
 *{
     margin: 0;
@@ -6,7 +8,7 @@
 }
 
 body{
-font-family: Arial, Helvetica, sans-serif;
+font-family: "Libertinus Serif", Arial, Helvetica, sans-serif;
 display: flex;
 flex-direction: column;
 min-height: 100vh;
@@ -50,10 +52,10 @@ main {
 #meus-hobbies {
     background-color: rgb(250, 248, 250);
     width: 80%;
-    margin-bottom: 16px;
     border-radius: 12px;
     margin: 0 auto;
     padding: 20px;
+    margin-bottom: 46px;
 }
 
 #titulo-meus-hobbies {
@@ -79,7 +81,43 @@ li {
 }
 
 li:hover {
-    background-color: rgb(199, 161, 243);
+    background-color: rgb(227, 178, 255);
     transform: translateX(5px);
     transition: all 0.3s ease;
+}
+
+#contato {
+    background-color: rgb(250, 250, 250);
+    width: 80%;
+    margin-bottom: 16px;
+    border-radius: 12px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+#contato h3 {
+    margin-bottom: 8px;
+    font-size: 20px;
+}
+
+#contato p {
+    font-size: 16px;
+}
+
+#contato a {
+    color:rgb(118, 1, 168);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem;
+    border: 2px solid rgb(227, 178, 255);
+    border-radius: 30px;
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+
+#contato a:hover {
+    background-color: rgb(227, 178, 255);
+    color: rgb(118, 1, 168);
+    transform: translateY(-2px);
 }
